<resources>

<!--    IT 19 1616 48-->

    <string name="app_name">Digital Health</string>
    <string name="call_an_ambulance">Call an Ambulance</string>
    <string name="already_have_an_account">Already have an Account? Login</string>
    <string name="create_account">Create Account</string>
    <string name="enter_name">Name</string>
    <string name="enter_phone">Phone Number</string>
    <string name="enter_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="login_btn">Login</string>
    <string name="i_am_an_admin">I am an admin</string>
    <string name="i_am_not_an_admin">I am not an admin</string>
    <string name="close_btn">Close</string>
    <string name="enter_doctor_details">Doctor Details</string>
    <string name="doctor_add_photo">Add Photo</string>
    <string name="specialization">Specialization</string>
    <string name="address">Address</string>
    <string name="nic">NIC</string>
    <string name="slmc_reg_no">SLMC registration number</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="manage_doctors">Manage Doctors</string>
    <string name="update_btn">Update</string>
    <string name="manage_users">Manage Users</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="delete_my_profile">Delete My Profile</string>
    <string name="bmi_calculator_title">Body Mass Index (BMI)</string>
    <string name="bmi_enter_height">Height in cm</string>
    <string name="bmi_weight">Weight in kg</string>
    <string name="calculate_btn">Calculate</string>
    <string name="bmi_range">Underweight \u003C 18.5 \u003E Healthy \u003C 25 \u003E Overweight</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="find_a_doctor">Find your Doctor</string>
    <string name="my_appointments">My Appointments</string>
    <string name="my_reports">My Reports</string>
    <string name="quick_health_checkups">Quick Health Checkups</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="find_your_doctor">Find your Doctor :</string>
    <string name="re_enter_password">Re-enter Password</string>



    <string name="bmr_title">Basal Metabolic Rate (BMR)</string>
    <string name="calorie_calculator_title">Calorie Calculator</string>
    <string name="body_fat_calculator_title">Body Fat Calculator</string>

    <!--    IT19204680-->

    <!--    Admin Dashboard-->
    <string name="docaNo">Total No of Registered Doctors</string>
    <string name="cusNo">Total No of Registered Customers</string>
    <string name="countDocs">54</string>
    <string name="cusCount">567</string>


    <string name="SS_functionName">Medical Reports</string>

    <string name="GenRepo">Generate Report</string>
    <string name="DelRepo">DELETE REPORT</string>
    <string name="UPRepo">UPDATE REPORT</string>

    <!--   BodyFat Calculator-->
    <string name="SS_cal">Body Fat Calculator</string>
    <string name="FatAge">Age   ex : 25</string>
    <string name="waistSize">Waist size  in  cm   </string>
    <string name="Neck">Neck Size in   cm   </string>
    <string name="HipSize">Hip size in  cm   </string>
    <string name="Height">Height in cm</string>
    <string name="resultComment">Your body is Healthy!!!</string>
    <string name="result">Your Body Fat Perecentage :</string>
    <string name="patent_name">Patient Name :</string>
    <string name="eosinophills">Eosinophills</string>
    <string name="monocytes">Monocytes</string>
    <string name="lymphocytes">Lymphocytes</string>
    <string name="rbc_count">RBC COUNT</string>
    <string name="pcv">PCV :</string>
    <string name="mcv">MCV</string>
    <string name="back">Back</string>
    <string name="investigation">Investigation</string>
    <string name="patent_id">Patient ID :</string>
    <string name="heamoglobin">HEAMOGLOBIN</string>
    <string name="basophills">Basophills</string>
    <string name="myelocytes">Myelocytes</string>
    <string name="band_cells">Band Cells</string>
    <string name="blastcells">BlastCells</string>
    <string name="comment">Comment</string>
    <string name="PLATELET">PLATELET COUNT</string>

    <!--        UNITS-->

    <string name="Heam">gm/dl</string>
    <string name="percent">%</string>
    <string name="RBCunit">m/mm3</string>
    <string name="MCVunit">fL</string>
    <string name="Plateletunit">thou/mm3</string>
    <string name="manage_sessions">Manage Sessions</string>

    <string name="manage_customers">Manage Customers</string>
    <string name="manage_appointments">Manage Appointments</string>
    <string name="manage_reports">Manage Reports</string>


    <!--    Reports-->

    <string name="ListTitle">Check your Reports Here !!!</string>
    <string name="RepoTypes">Enter the Report Type...</string>

    <!-- IT19113364-->
    <string name="session_information">Session Information</string>
    <string name="add_new_session">Add New Session</string>
    <string name="enter_doctor_name">Name(Dr.)</string>
    <string name="no_of_patients">Maximum Number Of Patients</string>
    <string name="add_session_btn">Submit</string>
    <string name="sessions">Sessions</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="patient_age">Age</string>
    <string name="age_range">ages 15-80</string>
    <string name="patient_gender">Gender </string>
    <string name="create_session">Create Session</string>
    <!--    <string name="male">Male</string>-->
    <!--    <string name="female">Female</string>-->
    <string name="patient_weight">Weight :</string>
    <string name="patient_height">Height :</string>
    <string name="activity">Activity</string>
    <string name="clear_btn">Clear</string>
    <string name="session_date">Date</string>
    <string name="session_time">Time</string>
    <string name="update_session">Update Session</string>
    <string name="session_id">Session ID : #S004</string>
    <string name="session_delete_btn">Delete Session</string>
    <string name="doctor_specialization">Specialization :</string>
    <string name="session_day">Day</string>
    <string name="no_of_active_patients">Number Of Active Patients :</string>
    <string name="session_available_btn">Available</string>

    <!-- Amashi -->

    <string name="add_appoinment">Patient Infomation</string>
    <string name="email">Email</string>
    <string name="notes">Special Notes(if any)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="fullname">Full Name</string>
    <string name="contactnum">Contact Number</string>
    <string name="contact">Contact Number:</string>
    <string name="view_appoinment">My Appointment</string>
    <string name="app_id">Appointment ID:</string>
    <string name="patientname">Patient Name:</string>
    <string name="doctorname">Doctor:</string>
    <string name="date">Date:</string>
    <string name="session">Session:</string>
    <string name="app_no">Number:</string>
    <string name="delete_btn">Delete</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="bmrcalc">Basal Metabolic Rate</string>
    <string name="agerange">ages 15 -80</string>
    <string name="doctorName">Doctor Name</string>
    <string name="search">Search</string>
    <string name="search_details">Search Details</string>
    <string name="app_id_history">Appointment ID </string>
    <string name="patientname_history">Patient Name </string>
    <string name="date_history">Date </string>
    <string name="app_history">Appointment History</string>
    <string name="view_history">View History</string>
    <string name="close">Close</string>
    <string name="address_99_b_fiction_apps_col_07">Address : 99/B Fiction Apps Col-07</string>
    <string name="todo">todo</string>
    <string name="contact_no_07235518789">Contact No : 07235518789</string>
    <string name="np6321">NP6321</string>
    <string name="reportComment">Type a comment here...</string>
    <string name="hintName">Enter the patient Name</string>
    <string name="ex_1">ex: 1</string>
    <string name="BloodSugar">Blood Sugar Report</string>
    <string name="Date" />
    <string name="CustomerID">Customer ID :</string>
    <string name="patientName">PatientName :</string>
    <string name="GlucoseLevel">FASTING PLASMA GLUCOSE (FBS) </string>
    <string name="sugarDes">Reference ranges </string>
    <string name="dessu">70 - 99 mg/dL (3.9-5.5 mmol/L) = Normal fasting glucsoe level</string>
    <string name="hintNamepatient">Enter the Patient Name</string>
    <string name="exGlucLevel">ex   :   87.6</string>
    <string name="Glulevelunit">mg/ dL</string>
    <string name="HintCusid">ex : 0773551870</string>
    <string name="searchpatientName">Search by patient name</string>
    <array name="reportTypes">
        <item>Sugar Report(Fasting)</item>
        <item>Full Blood count Report</item>

    </array>
</resources>