<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateSessionActivity">

    <Toolbar
        android:id="@+id/ak_update_session_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_session"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:id="@+id/ak_update_session_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_btn"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="12dp"
                />
        </RelativeLayout>
    </Toolbar>

    <RelativeLayout
        android:id="@+id/ak_update_session_header"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ak_update_session_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_information"
            android:padding="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_alignParentStart="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ak_update_session_information"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/ak_update_session_header"
        android:layout_marginStart="30dp">

        <TextView
            android:id="@+id/ak_update_session_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_id"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/ak_update_session_doctor_name"
            android:layout_below="@+id/ak_update_session_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_doctor_name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/ak_update_session_doctor_specialization"
            android:layout_below="@+id/ak_update_session_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_specialization"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/ak_update_session_date"
            android:layout_below="@+id/ak_update_session_doctor_specialization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_date"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/ak_update_session_time"
            android:layout_below="@+id/ak_update_session_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_time"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/ak_update_session_no_of_patients"
            android:layout_below="@+id/ak_update_session_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_patients"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="70dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_alignParentStart="true"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/ak_update_session_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ak_update_session_information"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/update_btn"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/ak_update_session_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ak_update_session_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/delete_btn"
        android:textColor="@android:color/white"
        />




</RelativeLayout>