<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorRegistrationActivity">

    <Toolbar
        android:id="@+id/sm_doctor_registration_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        >
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_doctor_details"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_btn"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="12dp"
            />

      </RelativeLayout>

    </Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/sm_doctor_registration_profile_img"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_user"
        android:layout_below="@+id/sm_doctor_registration_toolbar"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/sm_doctor_registration_change_profile_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_add_photo"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/sm_doctor_registration_profile_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        />

    <EditText
        android:id="@+id/sm_doctor_registration_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sm_doctor_registration_change_profile_img_btn"
        android:background="@drawable/input_design"
        android:padding="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/sm_doctor_registration_specialization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sm_doctor_registration_name"
        android:background="@drawable/input_design"
        android:padding="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/specialization"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/sm_doctor_registration_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sm_doctor_registration_specialization"
        android:background="@drawable/input_design"
        android:padding="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/sm_doctor_registration_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sm_doctor_registration_address"
        android:background="@drawable/input_design"
        android:padding="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_phone"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/sm_doctor_registration_nic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sm_doctor_registration_phone"
        android:background="@drawable/input_design"
        android:padding="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/nic"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/sm_doctor_registration_slmc_reg_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sm_doctor_registration_nic"
        android:background="@drawable/input_design"
        android:padding="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/slmc_reg_no"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/sm_doctor_registration_add_doctor_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sm_doctor_registration_slmc_reg_no"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/add_doctor"
        android:textColor="@android:color/white"
        />


  </RelativeLayout>