<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SessionList">

    <Toolbar
        android:id="@+id/ak_session_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/ak_session_list_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_btn"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_alignParentStart="true"
                />
        </RelativeLayout>
    </Toolbar>

    <SearchView
        android:id="@+id/searchDoctorName"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/SS_cal"
        android:background="@drawable/searchborder"
        android:elevation="20dp"
        android:queryHint="@string/searchpatientName" />



</LinearLayout>